--- a/capstone-common.props
+++ b/capstone-common.props
@@ -4,7 +4,7 @@
   <ItemDefinitionGroup>
     <ClCompile>
       <DisableSpecificWarnings>4245;4310;4706;%(DisableSpecificWarnings)</DisableSpecificWarnings>
-      <PreprocessorDefinitions>USE_SYS_DYN_MEM;CAPSTONE_HAS_ARM;CAPSTONE_HAS_ARM64;CAPSTONE_HAS_X86;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>USE_SYS_DYN_MEM;CAPSTONE_HAS_X86;CAPSTONE_DIET;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(ProjectDir)include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
@@ -46,56 +46,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ClInclude Include="arch\ARM\ARMAddressingModes.h" />
-    <ClInclude Include="arch\ARM\ARMBaseInfo.h" />
-    <ClInclude Include="arch\ARM\ARMDisassembler.h" />
-    <ClInclude Include="arch\ARM\ARMInstPrinter.h" />
-    <ClInclude Include="arch\ARM\ARMMapping.h" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ClCompile Include="arch\ARM\ARMDisassembler.c" />
-    <ClCompile Include="arch\ARM\ARMInstPrinter.c" />
-    <ClCompile Include="arch\ARM\ARMMapping.c" />
-    <ClCompile Include="arch\ARM\ARMModule.c" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="arch\ARM\ARMGenAsmWriter.inc" />
-    <None Include="arch\ARM\ARMGenDisassemblerTables.inc" />
-    <None Include="arch\ARM\ARMGenInstrInfo.inc" />
-    <None Include="arch\ARM\ARMGenRegisterInfo.inc" />
-    <None Include="arch\ARM\ARMGenSubtargetInfo.inc" />
-    <None Include="arch\ARM\ARMMappingInsn.inc" />
-    <None Include="arch\ARM\ARMMappingInsnOp.inc" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ClInclude Include="arch\AArch64\AArch64AddressingModes.h" />
-    <ClInclude Include="arch\AArch64\AArch64BaseInfo.h" />
-    <ClInclude Include="arch\AArch64\AArch64Disassembler.h" />
-    <ClInclude Include="arch\AArch64\AArch64InstPrinter.h" />
-    <ClInclude Include="arch\AArch64\AArch64Mapping.h" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ClCompile Include="arch\AArch64\AArch64BaseInfo.c" />
-    <ClCompile Include="arch\AArch64\AArch64Disassembler.c" />
-    <ClCompile Include="arch\AArch64\AArch64InstPrinter.c" />
-    <ClCompile Include="arch\AArch64\AArch64Mapping.c" />
-    <ClCompile Include="arch\AArch64\AArch64Module.c" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="arch\AArch64\AArch64GenAsmWriter.inc" />
-    <None Include="arch\AArch64\AArch64GenDisassemblerTables.inc" />
-    <None Include="arch\AArch64\AArch64GenInstrInfo.inc" />
-    <None Include="arch\AArch64\AArch64GenRegisterInfo.inc" />
-    <None Include="arch\AArch64\AArch64GenSubtargetInfo.inc" />
-    <None Include="arch\AArch64\AArch64MappingInsn.inc" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ClInclude Include="arch\X86\X86BaseInfo.h" />
     <ClInclude Include="arch\X86\X86Disassembler.h" />
     <ClInclude Include="arch\X86\X86DisassemblerDecoder.h" />
@@ -105,7 +55,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ClCompile Include="arch\X86\X86ATTInstPrinter.c" />
     <ClCompile Include="arch\X86\X86Disassembler.c" />
     <ClCompile Include="arch\X86\X86DisassemblerDecoder.c" />
     <ClCompile Include="arch\X86\X86IntelInstPrinter.c" />
